--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="styles.css" >
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/cake.html" target="_blank" rel="noopener noreferrer">Chocolate Cake</a>
-        <a href="recipes/iced-coffee.html" target="_blank" rel="noopener noreferrer">Iced Coffee</a>
-        <a href="recipes/lasagna.html" target="_blank" rel="noopener noreferrer">Lasagna</a>
-
+        <h1 class="title">Odin Recipes</h1>
+        <h2 class="recipes-box">
+            <a href="recipes/cake.html" class="recipes" target="_blank" rel="noopener noreferrer">Chocolate Cake</a>
+            <a href="recipes/iced-coffee.html" class="recipes" target="_blank" rel="noopener noreferrer">Iced Coffee</a>
+            <a href="recipes/lasagna.html" class="recipes" target="_blank" rel="noopener noreferrer">Lasagna</a>
+        </h2>
     </body>
 </html>
