Suporte a CSS adicionado

--- a/recipes/cake.html
+++ b/recipes/cake.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Chocolate Cake</h1>
-        <img src="images/cake.jpg" alt="Chocolate Cake" width="400" height="200">
+        <h1 class="recipe-title">Chocolate Cake</h1>
+        <div class="recipe-image"><img src="images/cake.jpg" alt="Chocolate Cake" width="400" height="200"></div>
         
         <h2>Description</h2>
         <p>When it comes to a classic and delicious dessert, few options are as tempting as a good chocolate cake. This simple and easy-to-make recipe is the perfect solution to satisfy that craving for a delicious and pleasurable sweet treat.</p> 
