--- a/recipes/iced-coffee.html
+++ b/recipes/iced-coffee.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Iced Coffee</h1>
-        <img src="images/iced-coffee.jpg" alt="Iced coffee" width="400" height="300">
+        <h1 class="recipe-title">Iced Coffee</h1>
+        <div class="recipe-image"><img src="images/iced-coffee.jpg" alt="Iced coffee" width="400" height="300"></div>
         
         <h2>Description</h2>
         <p>Iced coffee is a beverage made with coffee mixed with frozen food. This type of drink is more suitable for the summer months, but it can also be enjoyed on colder winter days.</p>
