--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,11 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Odin Recipes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
 
     <body>
-        <h1>Lasagna</h1>
-        <img src="images/lasagna.jpg" alt="Lasagna" width="400" height="200">
+        <h1 class="recipe-title">Lasagna</h1>
+        <div class="recipe-image"><img src="images/lasagna.jpg" alt="Lasagna" width="400" height="200"></div>
         
         <h2>Description</h2>
         <p>The ground beef lasagna recipe is a classic dish, much loved and very easy to prepare. Also known as Bolognese lasagna, due to its origin in Bologna, Italy, this recipe has conquered the world! This dish is a true celebration of flavors, with alternating layers of pasta, ground beef sauce, and melted cheese, resulting in a delicious and irresistible combination!</p>
