Barra de navegação criada e estilizada

--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
         <title>Odin Recipes</title>
         <link rel="stylesheet" href="styles.css" >
     </head>
+
     <body>
-        <h1 class="title">Odin Recipes</h1>
-        <h2 class="recipes-box">
-            <a href="recipes/cake.html" class="recipes" target="_blank" rel="noopener noreferrer">Chocolate Cake</a>
-            <a href="recipes/iced-coffee.html" class="recipes" target="_blank" rel="noopener noreferrer">Iced Coffee</a>
-            <a href="recipes/lasagna.html" class="recipes" target="_blank" rel="noopener noreferrer">Lasagna</a>
-        </h2>
+        <header>
+            <span class="title">Odin Recipes</span>
+            <nav>
+                <h2 class="recipes-box">
+                    <a href="index.html" class="recipes" rel="noopener noreferrer">Home page</a>
+                    <a href="recipes/cake.html" class="recipes" rel="noopener noreferrer">Chocolate Cake</a>
+                    <a href="recipes/iced-coffee.html" class="recipes" rel="noopener noreferrer">Iced Coffee</a>
+                    <a href="recipes/lasagna.html" class="recipes" rel="noopener noreferrer">Lasagna</a>
+                </h2>
+            </nav>
+        </header>
     </body>
 </html>
