--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,6 +8,17 @@
     </head>
 
     <body>
+        <header>
+            <span class="title">Odin Recipes</span>
+            <nav>
+                <h2 class="recipes-box">
+                    <a href="../index.html" class="recipes" rel="noopener noreferrer">Home page</a>
+                    <a href="cake.html" class="recipes" rel="noopener noreferrer">Chocolate Cake</a>
+                    <a href="iced-coffee.html" class="recipes" rel="noopener noreferrer">Iced Coffee</a>
+                    <a href="lasagna.html" class="recipes" rel="noopener noreferrer">Lasagna</a>
+                </h2>
+            </nav>
+        </header>
         <h1 class="recipe-title">Lasagna</h1>
         <div class="recipe-image"><img src="images/lasagna.jpg" alt="Lasagna" width="400" height="200"></div>
         
